Fixed col alignment

--- a/src/componenets/Calendar/bodyCalendar.module.css
+++ b/src/componenets/Calendar/bodyCalendar.module.css
@@ -1,19 +1,21 @@
 .topContainer{
-    justify-content: space-evenly;
+    flex:1;
     display: flex;
-    background-color: blue;
+    justify-content: space-evenly;
+    background-color: red;
 }
 
 .column{
     width: 100%;
-    background-color: bisque;
-    border:1px solid black;
+    border-left:1px solid black;
+    border-right:1px solid black;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .row{
+    width: 100%;
     text-align: center;
 }
