--- a/src/componenets/Calendar/subHeader.module.css
+++ b/src/componenets/Calendar/subHeader.module.css
@@ -9,5 +9,4 @@
     width: 100%;
     border: 1px solid black;
     text-align: center;
-    background-color: blue;
 }
